(#7)[7/10/2017-21:41 pre-alpha Sergix]
    Created appdata.js, containing methods for interacting with Entryflow's AppData directory.
    project_dir and project_files moved to editor component.
    Closing and re-opening the app automatically loads last loaded project.
    Pushed updates to Git.

(#6)[7/9/2017-20:21 pre-alpha Sergix]
    Moved sidebar icons to top of window.

(#5)[7/9/2017-15:30 pre-alpha Sergix]
    Fixed an bug where I forgot to clear the project_files array when opening a new directory.

(#4)[7/9/2017-9:08 pre-alpha Sergix]
    Sidebar now has settings (does nothing atm) and GitHub (opens project page) icons.
    "Load Project" button now opens a dialog and selects a directory to use as a project, and puts the files in the sidebar and can be opened in the editor.
    Pushed updates to Git.

(#3)[7/8/2017-18:52 pre-alpha Sergix]
    Created basic window with sidebar and text input area.
    Created "css" and "vue" dirs in the src folder.

(#2)[7/8/2017-9:50 pre-alpha Sergix]
    Created electron dependencies using electron-forge.
    Created TypeScript dependencies.
    Created base Vue project sources.
    Pushed updates to Git.

(#1)[7/7/2017-23:32 pre-alpha Sergix]
    Created base repository and logo.
    Uploaded README and changelog.
    No current assigned project version; state is currently in pre-alpha ("preperation") stage.
    Pushed updates to Git.